--- a/site/help.html
+++ b/site/help.html
@@ -13,8 +13,8 @@
     <link rel="manifest" href="./manifest.webmanifest" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
-    <link rel="stylesheet" href="./main.css" />
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="../main.min.css" />
+    <link rel="shortcut icon" href="../logo.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
@@ -37,7 +37,7 @@
         <div class="close none" data-close="nav">X</div>
         <div id="logo"><div id="img"></div></div>
         <div id="menu" class="grid-row-gap-20px">
-          <a href="./index.html" id="home" class="option">
+          <a href="../index.html" id="home" class="option">
             <div class="text" class="option">Home</div>
           </a>
           <a href="./doc.html" id="documentation" class="option">
