--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     />
     <meta name="author" content="Igor Ratajczak" />
     <title>Library Main CSS</title>
-    <link rel="manifest" href="./manifest.webmanifest" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/mobile.css" />
+    <link rel="manifest" href="site/manifest.webmanifest" />
+    <link rel="stylesheet" href="site/css/style.css" />
+    <link rel="stylesheet" href="site/css/mobile.css" />
     <link rel="stylesheet" href="./main.css" />
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
@@ -40,13 +40,13 @@
           <a href="./index.html" id="home" class="option">
             <div class="text" class="option">Home</div>
           </a>
-          <a href="./doc.html" id="documentation" class="option">
+          <a href="site/doc.html" id="documentation" class="option">
             <div class="text" class="option">Documentation</div>
           </a>
-          <a href="./about.html" id="about" class="option">
+          <a href="site/about.html" id="about" class="option">
             <div class="text">About</div>
           </a>
-          <a href="./help.html" id="help" class="option">
+          <a href="site/help.html" id="help" class="option">
             <div class="text">Help create it</div>
           </a>
         </div>
