--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="site/manifest.webmanifest" />
     <link rel="stylesheet" href="site/css/style.css" />
     <link rel="stylesheet" href="site/css/mobile.css" />
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./main.min.css" />
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
