--- a/site/about.html
+++ b/site/about.html
@@ -52,6 +52,7 @@
         </div>
       </nav>
       <main class="grid grid-cl-2-3 grid-row-1-3">
+        <h1 class="grid grid-cl-2-3 grid-row-1-2">Main CSS Library About</h1>
         <div id="markdown-text" class="grid grid-cl-2-3 grid-row-2-3"></div>
       </main>
       <footer class="grid-cl-2-3 grid-row-3-4">
