--- a/site/doc.html
+++ b/site/doc.html
@@ -22,11 +22,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
-    <style>
-      h1 {
-        margin: 0;
-      }
-    </style>
   </head>
   <body class="overflow-x-hidden">
     <div id="root" class="grid">
@@ -57,6 +52,7 @@
         </div>
       </nav>
       <main class="grid grid-cl-2-3 grid-row-1-3">
+        <h1 class="grid grid-cl-2-3 grid-row-1-2">Main CSS Library Documentation</h1>
         <div id="markdown-text" class="grid grid-cl-2-3 grid-row-2-3"></div>
       </main>
       <footer class="grid-cl-2-3 grid-row-3-4">
