--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     />
     <meta name="author" content="Igor Ratajczak" />
     <title>Library Main CSS</title>
-    <link rel="manifest" href="site/manifest.webmanifest" />
-    <link rel="stylesheet" href="site/css/style.css" />
-    <link rel="stylesheet" href="site/css/mobile.css" />
-    <link rel="stylesheet" href="./main.min.css" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/mobile.css" />
+    <link rel="stylesheet" href="css/main.min.css" />
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
@@ -35,18 +35,18 @@
       </div>
       <nav class="fixed height-100per">
         <div class="close none" data-close="nav">X</div>
-        <div id="logo"><div id="img"></div></div>
+        <div id="logo"><img src="logo.png" width="208" height="134" /></div>
         <div id="menu" class="grid-row-gap-20px">
-          <a href="./index.html" id="home" class="option">
+          <a href="index.html" id="home" class="option">
             <div class="text" class="option">Home</div>
           </a>
-          <a href="site/doc.html" id="documentation" class="option">
+          <a href="doc.html" id="documentation" class="option">
             <div class="text" class="option">Documentation</div>
           </a>
-          <a href="site/about.html" id="about" class="option">
+          <a href="about.html" id="about" class="option">
             <div class="text">About</div>
           </a>
-          <a href="site/help.html" id="help" class="option">
+          <a href="help.html" id="help" class="option">
             <div class="text">Help create it</div>
           </a>
         </div>
@@ -59,7 +59,7 @@
         <p id="copyright"></p>
       </footer>
       <script>
-        fetch("site/home.md")
+        fetch("md/home.md")
           .then((response) => response.text())
           .then((markdown) => {
             // Convert Markdown to HTML
@@ -72,6 +72,6 @@
           });
       </script>
     </div>
-    <script src="site/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
