--- a/doc.html
+++ b/doc.html
@@ -9,12 +9,12 @@
       content="Main CSS library, CSS framework, CSS utility classes, Web development, Front-end development, CSS styling, Responsive design, CSS grid, CSS properties, CSS classes, Code organization, Code efficiency, Code reusability,"
     />
     <meta name="author" content="Igor Ratajczak" />
-    <title>Library Main CSS Help</title>
-    <link rel="manifest" href="./manifest.webmanifest" />
+    <title>Library Main CSS Documentation</title>
+    <link rel="manifest" href="manifest.webmanifest" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
-    <link rel="stylesheet" href="../main.min.css" />
-    <link rel="shortcut icon" href="../logo.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/main.min.css" />
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
@@ -24,7 +24,7 @@
     ></script>
   </head>
   <body class="overflow-x-hidden">
-    <div id="root" class="grid height-100per">
+    <div id="root" class="grid">
       <div id="nav-mobile" class="grid-cl-1-2 grid-row-1-2">
         <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 0 448 512">
           <!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -35,31 +35,31 @@
       </div>
       <nav class="fixed height-100per">
         <div class="close none" data-close="nav">X</div>
-        <div id="logo"><div id="img"></div></div>
+        <div id="logo"><img src="logo.png" width="208" height="134" /></div>
         <div id="menu" class="grid-row-gap-20px">
-          <a href="../index.html" id="home" class="option">
+          <a href="index.html" id="home" class="option">
             <div class="text" class="option">Home</div>
           </a>
-          <a href="./doc.html" id="documentation" class="option">
+          <a href="doc.html" id="documentation" class="option">
             <div class="text" class="option">Documentation</div>
           </a>
-          <a href="./about.html" id="about" class="option">
+          <a href="about.html" id="about" class="option">
             <div class="text">About</div>
           </a>
-          <a href="./help.html" id="help" class="option">
+          <a href="help.html" id="help" class="option">
             <div class="text">Help create it</div>
           </a>
         </div>
       </nav>
       <main class="grid grid-cl-2-3 grid-row-1-3">
-        <h1 class="grid grid-cl-2-3 grid-row-1-2">Main CSS Library Help Create It</h1>
+        <h1 class="grid grid-cl-2-3 grid-row-1-2">Main CSS Library Documentation</h1>
         <div id="markdown-text" class="grid grid-cl-2-3 grid-row-2-3"></div>
       </main>
       <footer class="grid-cl-2-3 grid-row-3-4">
         <p id="copyright"></p>
       </footer>
       <script>
-        fetch("./help.md")
+        fetch("md/documentation.md")
           .then((response) => response.text())
           .then((markdown) => {
             // Convert Markdown to HTML
