--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/mobile.css" />
     <link rel="stylesheet" href="css/main.min.css" />
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="favicon.ico" type="image/ico" />
+    <link rel="icon" href="favicon.ico" type="image/ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
