Repair image link

--- a/help.html
+++ b/help.html
@@ -36,7 +36,7 @@
       </div>
       <nav class="fixed height-100per">
         <div class="close none" data-close="nav">X</div>
-        <div id="logo"><img src="./logo.png" width="208" height="134" /></div>
+        <div id="logo"><img src="img/logo-192x124.png" width="192" height="124" /></div>
         <div id="menu" class="grid-row-gap-20px">
           <a href="index.html" id="home" class="option">
             <div class="text" class="option">Home</div>
