--- a/help.html
+++ b/help.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="css/main.min.css" />
     <link rel="apple-touch-icon" href="favicon.ico" type="image/ico" />
     <link rel="icon" href="favicon.ico" type="image/ico" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js" async></script>
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
       integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
+      async
     ></script>
   </head>
   <body class="overflow-x-hidden">
@@ -36,7 +37,7 @@
       </div>
       <nav class="fixed height-100per">
         <div class="close none" data-close="nav">X</div>
-        <div id="logo"><img src="img/logo-192x124.png" width="192" height="124" /></div>
+        <div id="logo"><img src="img/icon-192x192.png" alt="logo Main CSS" width="192" height="192" /></div>
         <div id="menu" class="grid-row-gap-20px">
           <a href="index.html" id="home" class="option">
             <div class="text" class="option">Home</div>
