--- a/doc.html
+++ b/doc.html
@@ -16,14 +16,6 @@
     <link rel="stylesheet" href="css/main.min.css" />
     <link rel="apple-touch-icon" href="favicon.ico" type="image/ico" />
     <link rel="icon" href="favicon.ico" type="image/ico" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js" async></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
-      integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-      async
-    ></script>
   </head>
   <body class="overflow-x-hidden">
     <div id="root" class="grid">
@@ -60,6 +52,13 @@
       <footer class="grid-cl-2-3 grid-row-3-4">
         <p id="copyright"></p>
       </footer>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js"
+        integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+      ></script>
       <script>
         fetch("md/documentation.md")
           .then((response) => response.text())
